2015-12-23  SilverNexus
	* output.c: Reduce severity of failed load of output file. If it fails, print to stdout.
	  Then shortened the file output phrase to reduce output size.
	  Alter check for stdout printing to match new design.
	* settings.c: Change default behavior to print to stdout.
	  Make case insensitive searches only exist if strcasestr does.
	* parseArgs.c: Retired -O and --stdout flags. Replaced by default behavior.
	  Only parse -n and --no-case if strcasestr exists.
	* settings.h: Remove flags field; it is no longer used.
	* main.c: Alter check for stdout printing to match new design.
	* README: Remove usage on the -O and --stdout flags.
	  Added a note to -n and --no-case indicating they only exist if strcasestr is present.
	* configure.ac: Removed check for vsnprintf. It is part of C99.

2015-12-22  SilverNexus
	* search.c: Refactor mmap()ed search to only find the line number when a match
	  is found.
	  Also, fixed a bug introduced from the refactor that caused it to always search for "alt".
	  Patched out a potential buffer overflow in the dirent-based implementation of the folder walk.
	* configure.ac: Removed redundant check for strstr(). It is part of C99.
	  Add check for strdup().
	* main.c: Fixed a bug where searchResults.txt was deleted when output is routed to stdout.
	* result_list.c: Use strdup() if we have it.

2015-12-21  SilverNexus
	* search.c: Add implemetation to use mmap() if available, otherwise use stdio.
	* configure.ac: Add check for function mmap().

2015-12-20  SilverNexus
	* search.c: Refactor file opening to be inside file search functions. Reduces parameters
	  passed to the function.
	* search.h: Adjust the function declarations to match the definition.
	* settings.h: Adjust the search function pointer declaration to match the definitions.

2015-12-19  SilverNexus
	* configure.ac: Removed several checks redundant with needing a C99-compliant compiler.